--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,48 @@
-# Node
+# Dependencies
 node_modules/
+.pnp/
+.pnp.js
 
-# Next.js
+# Testing
+coverage/
+
+# Next.js build outputs
 .next/
 out/
+.turbo/
+
+# Production builds
+build/
+dist/
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# OS
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# OS/editor junk
 .DS_Store
+*.swp
+*.swo
+.idea/
+.vscode/
 
 # TypeScript
 *.tsbuildinfo
 
-# IDE
-.idea/
-.vscode/
+# Cache
+.cache/
 
-# Env
-.env
-.env.*
-
-# Misc
-coverage/ 
+# Vercel
+.vercel/ 
